# scalping-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: backtest_signals.py  calibrate_body_filter.py  check_db.py  check_okx.py  check_progress.py  download_history.py  scan_uptrends.py  show_decisions.py
src/scalping_bot/: __init__.py  config.py  indicators.py  logging_setup.py  main.py  market_data.py  order_executor.py  risk_manager.py  signal_engine.py
src/scalping_bot/exchange/: __init__.py  okx_client.py
src/scalping_bot/grid/: __init__.py  manager.py
src/scalping_bot/storage/: db.py  repository.py  schema.sql
tests/: test_config.py  test_indicators.py  test_signal_engine.py
